--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="container">
         <div>
             <h3>HOME</h3>
-            
-                <p id="home-points"> 0 </p>
-            
+
+            <p id="home-points"> 0 </p>
+            <!--data-side="home" data-score="1"-->
             <button onclick="homeOne()"> +1 </button>
             <button onclick="homeTwo()"> +2 </button>
             <button onclick="homeThree()"> +3 </button>
